<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_CapManometer" Id="{122c4cbe-0afb-4580-8270-bb321f910368}">
    <Declaration><![CDATA[TYPE ST_CapManometer EXTENDS ST_VacuumGauge :
STRUCT
	//rFull_Scale used for scaling the voltage range of Capacitance
	//Manometer
	rFull_Scale : REAL; //in Torr
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>