<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_VacuumGauge" Id="{812c03ad-6df6-423d-97af-0b61783374d3}">
    <Declaration><![CDATA[TYPE ST_VacuumGauge :
STRUCT
	(* Simulation parameters *)
	rPress	:	REAL;//The real pressure coming from the ST_volume @ a chamber
	
	(* IO Readback *)
	q_iRawPress	:	INT;// The transformed integer from real pressure to an integer encoded signal to be passed to the PLC 
	
	(* Testing Connection *)
	q_xGaugeConnected	: BOOL;// to connect and disconnect gauge, easy to check whether gauge in connected at correct location

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>